# haproxy-dataset-generator

./: .env.exemple  .gitignore  00_rebuild_all.py  01_scrape.py  01b_enrich_metadata.py  02_chunking.py  02_ingest_v2.py  03_build_index_v2.py  03_build_index_v3.py  03_indexing.py  04_app.py  04_chatbot.py  04_chatbot_backup.py  04b_agentic_chatbot.py  05_bench_questions.py  05_bench_targeted.py  06_bench_ollama.py  06_bench_v3.py  07_bench_targeted.py  AGENTS.md  BENCHMARK_TIMES.md  CORRECTION_QUESTIONS_CRITIQUES.md  GUIDE_COMPLET.md  GUIDE_IMPLEMENTATION_AGENTIC.md  LEARNING.md  MODELE_CONFIG.md  PIPELINE_RAG_GENERIC.md  QWEN.md  Qwen3_(14B)_Reasoning_Conversational.ipynb  README.md  README_V3.md  TODO.md  TODO_IMPROVEMENTS.md  V3_PERFORMANCE_TRACKING.md  analyze_failures.py  bench_config_correction_report  bench_config_correction_report.html  bench_config_correction_report.md  bench_config_dataset.py  bench_config_metrics.py  (+33 more)
.qwen/: PROJECT_SUMMARY.md
agentic_rag/: 00_rebuild_agentic.py  01_scrape_crawl4ai.py  01_scrape_verified.py  02_chunking_parent_child.py  03_indexing_chroma.py  04_agentic_chatbot.py  05_bench_agentic.py  05_bench_agentic_simple.py  06_eval_parent_child.py  07_export_dataset_agentic.py  08_debug_test.py  09_debug_chroma.py  10_debug_content.py  11_debug_sections.py  12_check_scraped.py  13_check_chroma.py  14_debug_single_question.py  15_check_stats_chunks.py  16_check_scraped_stats.py  17_check_scraping_structure.py  18_rebuild_from_v3.py  19_test_after_rebuild.py  20_fix_scraping.py  21_test_single_question.py  22_debug_retrieval.py  23_granular_scraper.py  24_inspect_html.py  BENCHMARK_LANGGRAPH_92.json  PERFORMANCE.md  README_AGENTIC.md  __init__.py  analyze_anchors.py  analyze_failures.py  bench_5_validation.py  bench_agentic.py  bench_agentic_config.py  bench_agentic_ollama.py  bench_hybrid_full.py  bench_langgraph_92.py  bench_models_quality.py  (+2 more)
agentic_rag/app/: __init__.py  chat_interface.py  document_manager.py  evaluator.py  gradio_app.py  hybrid_rag.py  rag_system.py  simple_agentic.py  simple_rag.py
agentic_rag/data_agentic/: .gitignore
data/: haproxy_dataset_qa.jsonl  sections.jsonl  sections.jsonl.bak  sections_crawl4ai.jsonl  sections_enriched.jsonl
doc/: BENCHMARK_TIMES.md  CORRECTION_QUESTIONS_CRITIQUES.md  GUIDE_COMPLET.md  QWEN.md  config_crawl4ai.md  full_config.md
grep_rag/: 00_debug_crawl4ai.py  00_debug_crawl4ai_v2.py  00_test_crawl4ai_formats.py  01_scrape_grep.py  02_verify_coverage.py  03_build_index.py  config_grep.py
index_v2/: bm25.pkl
index_v3/: bm25.pkl
plans/: amelioration_readme_agentic_rag.md  ameliorations_chunking.md  analyse_elements_superflus.md  benchmark_metrics_spec.md  benchmark_validator_spec.md  plan_benchmark_correction_config.md  plan_integration_crawl4ai_agentic_rag.md  plan_reconstruction_04_chatbot.md
rag/: 00_rebuild_all.py  01_scrape.py  01b_enrich_metadata.py  02_chunking.py  03_indexing.py  04_chatbot.py  05_bench_targeted.py  06_bench_ollama.py  07_bench_config_correction.py  README.md  bench_config_dataset.py  compare_content.py  compare_rag.py  compare_rag_vs_agentic.py  compare_scrapers.py  logging_config.py
scraping_comparison/: COMPARISON_REPORT.md  bench_crawl4ai.py  bench_crawlee.py  compare_results.py
scripts/: extract_to_markdown.py  generate_qa_with_ollama.py
training/: finetune_haproxy_on_colab.ipynb  finetune_haproxy_unsloth.ipynb  kaggle_finetune_haproxy.ipynb
verification/: verify_chatbot.py
(+88 files in other folders)
