[project]
name = "haproxy-chatbot"
version = "0.1.0"
description = "Chatbot RAG hybride sur la documentation HAProxy 3.2"
requires-python = ">=3.11"

dependencies = [
    # Core scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",

    # RAG : index hybride
    "chromadb>=1.0.0",
    "rank-bm25>=0.2.2",

    # RAG : reranking
    "flashrank>=0.2.0",

    # LLM local
    "ollama>=0.1.7",

    # Interface
    "gradio>=4.20.0",

    # Utilitaires
    "numpy>=1.24.0",
]

[project.scripts]
scrape      = "01_scrape:main"
ingest      = "02_ingest_v2:main"
build-index = "03_build_index_v2:main"
app         = "04_app:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
]
