[project]
name = "haproxy-chatbot"
version = "0.1.0"
description = "Chatbot RAG hybride sur la documentation HAProxy 3.2"
requires-python = ">=3.11"

dependencies = [
    # Core scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # RAG : index hybride
    "chromadb>=1.0.0",
    "rank-bm25>=0.2.2",
    # RAG : reranking
    "flashrank>=0.2.0",
    # LLM local
    "ollama>=0.1.7",
    # Interface
    "gradio==6.6.0",
    # Agentic RAG
    "langgraph",
    "langchain",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-community",
    "tiktoken",
    # Utilitaires
    "numpy>=1.24.0",
    "ruff>=0.15.2",
    "playwright>=1.58.0",
]

[project.scripts]
scrape      = "01_scrape:main"
chunking    = "02_chunking:main"
indexing    = "03_indexing:main"
chatbot     = "04_chatbot:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
]
