[project]
name = "haproxy-chatbot"
version = "0.1.0"
description = "Chatbot RAG hybride et système RAG Agentic pour la documentation HAProxy 3.2"
requires-python = ">=3.13"

dependencies = [
    # Core scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # RAG : index hybride
    "chromadb>=1.0.0",
    "rank-bm25>=0.2.2",
    # RAG : reranking
    "flashrank>=0.2.0",
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "langgraph-checkpoint>=2.0.0",
    # LLM local
    "ollama>=0.1.7",
    # Interface
    "gradio>=6.6.0",
    # Utilitaires
    "numpy>=2.3.1",
    "pydantic>=2.0.0",
    "ruff>=0.15.2",
]

[project.scripts]
# Scripts RAG standard
scrape      = "01_scrape:main"
chunking    = "02_chunking:main"
indexing    = "03_indexing:main"
chatbot     = "04_chatbot:main"
# Scripts RAG Agentic
agentic-rebuild = "agentic_rag.rebuild_agentic:main"
agentic-scrape = "agentic_rag.scrape_verified:main"
agentic-chunking = "agentic_rag.chunking_parent_child:main"
agentic-indexing = "agentic_rag.indexing_chroma:main"
agentic-chatbot = "agentic_rag.agentic_chatbot:main"
agentic-bench = "agentic_rag.bench_agentic:main"
agentic-eval = "agentic_rag.eval_parent_child:main"
agentic-export = "agentic_rag.export_dataset_agentic:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
